--- a/index.html
+++ b/index.html
@@ -28,7 +28,19 @@
             <label for="new-phone-number">Phone Number</label>
             <input type="text"  class="form-control" id="new-phone-number">
           </div>
-          <button type="submit" class="btn-primary">Add</button>
+          <div class="form-group">
+            <label for="email-address">Email Address</label>
+            <input type="email"  class="form-control" id="new-email-address">
+          </div>
+          <div class="form-group">
+            <label for="work-address">Address</label>
+            <input type="text"  class="form-control" id="new-address">
+            <select class="address-type">
+              <option class="work">Work</option>
+              <option class="personal">Personal</option>
+            </select>
+          </div>
+          <button type="submit" class="btn-success">Add</button>
         </form>
         <hr>
         <h2>Contacts:</h2>
@@ -40,6 +52,10 @@
           <p>First Name: <span class="first-name"></span></p>
           <p>Last Name: <span class="last-name"></span></p>
           <p>Phone Number: <span class="phone-number"></span></p>
+          <p>Email Address: <span class="email-address"></span></p>
+          <p>Address: <span class="address">
+            <ul id="addresses"></ul>
+          </span></p>
           <div id="buttons">
           </div>
         </div>
