BUGFIX - fix getting address to populate in contact info when clicked.
Co-authored-by: Katie Pundt <kzpundt@gmail.com>

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
           <p>Last Name: <span class="last-name"></span></p>
           <p>Phone Number: <span class="phone-number"></span></p>
           <p>Email Address: <span class="email-address"></span></p>
-          <p>Address: <span class="address">
-            <ul id="addresses"></ul>
-          </span></p>
+          <p>Address: 
+            <ul id="address"></ul>
+          </p>
           <div id="buttons">
           </div>
         </div>
