--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
         <form id="new-contact">
           <div class="form-group">
             <label for="new-first-name">First Name</label>
-            <input type="text"  class="form-control" id="new-first-name">
+            <input type="text"  class="form-control" id="new-first-name" placeholder="Your First Name">
           </div>
           <div class="form-group">
             <label for="new-last-name">Last Name</label>
-            <input type="text"  class="form-control" id="new-last-name">
+            <input type="text"  class="form-control" id="new-last-name" placeholder="Your Surname">
           </div>
           <div class="form-group">
             <label for="new-phone-number">Phone Number</label>
-            <input type="text"  class="form-control" id="new-phone-number">
+            <input type="tel"  class="form-control" id="new-phone-number" placeholder="Ex: 503-555-1111" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
           </div>
           <div class="form-group">
             <label for="email-address">Email Address</label>
-            <input type="email"  class="form-control" id="new-email-address">
+            <input type="email"  class="form-control" id="new-email-address" placeholder="Ex: yourEmail@domain.com">
           </div>
           <div class="form-group">
             <label for="work-address">Address</label>
-            <input type="text"  class="form-control" id="new-address">
+            <input type="text"  class="form-control" id="new-address" placeholder="Ex: 234 SW Baker St.">
             <select class="address-type">
               <option class="work">Work</option>
               <option class="personal">Personal</option>
